style: Add extra space between `blockquote`. Fix `pre` and MD version of code

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -14,6 +14,7 @@ $color-fg:              ivory;
 $color-dark:            gray;
 $color-link:            deeppink;
 $color-theme:           #ffc100;
+$color-bullet:          gray;
 
 $color-row-odd:         #2a2a2a;
 $color-row-even:        #2f2f2f;
